# comic

./: .gitignore  CITATION.cff  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  METHODS.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
braincel/: __init__.py  arrays.py  bake.py  core.py  figure.py  pipeline.py  spec.py
braincel/web/: index.html  smoketest.html
braincel/web/app/: main.js
braincel/web/controls/: bind.js  cli-export.js  colorbar.js  freecanvas.js  gif-export.js  style-presets.js
braincel/web/core/: bbox.js  config-schema.js  core.test.js  framing.js  grid.js  views.js
braincel/web/data/: colormaps.json
braincel/web/scene/: passes.js  renderer.js
comic/: __init__.py  arrays.py  bake.py  colormaps.py  core.py  export.py  figure.py  pipeline.py  render.py  spec.py  template.py
comic/web/: index.html  smoketest.html
comic/web/app/: main.js  state.js
comic/web/controls/: bind.js  cli-export.js  freecanvas.js  gif-export.js  layout-presets.js  style-presets.js
comic/web/core/: buffers.js  cameras.js  config-schema.js  core.test.js  mesh-meta.js  presets.js  rotation.js  scene-helpers.test.js  surface-files.js  surface-files.test.js  template-bundle.js  views.js  visibility.js
comic/web/data/: anat.json  scene.json
comic/web/data/defaults/: manifest.json
comic/web/data/demo/: meta.json
comic/web/pyodide/: bootstrap.js  pipeline.py
comic/web/scene/: anatomy-cap.js  asset-loader.js  passes.js  renderer.js
docs/: reusing-figure-json.md
examples/: basic_glass_brain.py  with_fmri_overlay.py
glass_brains/: __init__.py  bake.py  core.py  figure.py  pipeline.py  render.py
glass_brains/viewer/: index.html
glass_brains/viewer/app/: browser-main.js  headless-entry.js
glass_brains/viewer/controls/: bind.js  kapow.js
glass_brains/viewer/scene/: renderer.js
glass_brains/web/: index.html
glass_brains/web/app/: main.js
glass_brains/web/controls/: bind.js  cli-export.js  cmap-picker.js  colorbar.js  freecanvas.js  kapow.js  style-presets.js
glass_brains/web/core/: colormap.js  config-schema.js  core.test.js  framing.js  presets.js  views.js
glass_brains/web/data/: render-config.json
glass_brains/web/data/defaults/: manifest.json
glass_brains/web/data/defaults/addiction/: meta.json
glass_brains/web/data/defaults/default_network/: meta.json
glass_brains/web/data/defaults/faces/: meta.json
glass_brains/web/data/defaults/language/: meta.json
glass_brains/web/scene/: materials.js  passes.js  renderer.js
tests/: integration_test.py  smoketest.py  test_anatomy_cut.py  test_animation.py  test_cli_arrays.py  test_cli_per_overlay.py  test_config_roundtrip.py  test_custom_template.py  test_features_m10.py  test_figure_api.py  test_figure_inmem.py  test_free_canvas.py  test_golden_renders.py  test_imports.py  test_mesh_memory.py  test_overlay_controls.py  test_pipeline_parity.py  test_pyodide_sync.py  test_region_report.py  test_render_session.py  test_smoothing.py  test_space_guard.py  test_style_presets.py  test_surface.py  test_ui_defaults.py  test_vendor_sync.py  test_view_transform.py  test_volume_only.py
